@@ -115,12 +115,13 @@ char *hpd_up =
     "                        Match <field> value against shell <pattern> (fnmatch(3) lib function)\n"
     "  -namei [<field>,]<pattern>\n"
     "                        Case insensitive variant of --name\n"
-    "  -lom <<field> > 5.0 && <field> != 0 || <field> ..>\n"
+    "  -lom <[(]expression[)]>\n"
     "                        Compare values by logical and comparison/relational operators\n"
     "                        Applies to any integer/floating point fields from data sources\n"
     "                          Use quotation marks to avoid collisions with bash operators\n"
-    "                        Valid logical operators: && (and), || (or)\n"
-    "                        Valid comparison/relational operators: =, !=, >, <, <=, >=\n"
+    "                          Valid logical operators: && (and), || (or)\n"
+    "                          Valid comparison/relational operators: =, !=, >, <, <=, >=\n"
+    "                          Expressions inside parentheses are treated as mathematical\n"
     "  --maxhit <limit>      Maximum number of positive filter matches (rest are forced negative)\n"
     "  --maxres <limit>      Maximum number of negative filter matches (rest are forced positive)\n"
     "  --ifhit               Ignore first match\n"
